--- a/index.html
+++ b/index.html
@@ -176,9 +176,11 @@
       
       <h1>Biography</h1>
 
-      <p>I am currently a 2nd year Ph.D. Student at The Chines University of Hong Kong, very honored and fortunate to be co-supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> from The Chinese University of Hong Kong and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei. I obtained my Bachelor degree from Communication University of China in 2019 and my research interests include meta dialogue system, controllable natural language generation, personalized open-domain dialogue system, reinforcement learning. Feel free to contact me for interdisciplinary research.
+      <p>I am currently a 2nd year Ph.D. Student at The Chines University of Hong Kong, very honored and fortunate to be supervised by 
+      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> from The Chinese University of Hong Kong. I obtained my Bachelor degree from Communication University of China in 2019 and my research interests include meta dialogue system, controllable natural language generation, personalized open-domain dialogue system, reinforcement learning. Feel free to contact me for interdisciplinary research.
       </p>
+
+      <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
 
 
       <div class="row">
