--- a/index.html
+++ b/index.html
@@ -296,27 +296,24 @@
       -->
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <p>
-            <a href="https://arxiv.org/abs/2210.05196">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
-            <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
-          </p>
+          <a href="https://arxiv.org/abs/2210.05196">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
+          <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
           <p class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </p>
           <span>Findings, <em>ACL-2023</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <p> 
-            <a href="https://arxiv.org/abs/2210.05196">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
-            <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
-          </p>
-          <p class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen,<strong>Hongru Wang </strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu </p>
+          <a href="https://arxiv.org/abs/2210.05196">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
+          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+          <p class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen,<strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu </p>
           <span><em>ACL-2023</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
+          <img src="https://img.shields.io/badge/Other-red">
           <p class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong </p>
           <span>Findings, <em>EMNLP-2022</em></span>
         </div>
