--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       -->
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2210.05196">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
+          <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
           <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
           <p class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </p>
           <span>Findings, <em>ACL-2023</em></span>
@@ -304,7 +304,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/abs/2210.05196">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
+          <a href="https://aclanthology.org/2023.acl-long.364/">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <p class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen,<strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu </p>
           <span><em>ACL-2023</em></span>
