--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </ul>
 
           <h3>Community</h3>
-          <ul class="ul-community">
+          <ul class="ul-community fa-ul">
             <li>
             <i class="fa-light fa-book"></i>
             Reviewer: EMNLP2023</li>
