--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <h3>Community</h3>
           <ul class="ul-community fa-ul">
             <li>
-            <i class="fa-light fa-book"></i>
+            <i class="fa-li fas fa-light fa-book"></i>
             Reviewer: EMNLP2023</li>
             
         
