--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <ul class="ul-community fa-ul">
             <li>
             <i class="fa-li fas fa-light fa-book"></i>
-            Reviewer: EMNLP2023</li>
+            Reviewer: IJCAI2023, EMNLP2023, AAAI 2024</li>
             
         
           </ul>
