--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>Sep 2023 </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
           <li>May 2023 </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Dialogue CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
           <li>May 2023 </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
           <li>Oct 2022 </span> One paper is accepted by <em>Finds of EMNLP 2022.</em> &#128525;</li>
@@ -307,6 +308,14 @@
           </div>
         </div>
       -->
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
+          <img src="https://img.shields.io/badge/TOD_NLU-blue">
+          <p class="author_list"><strong>Hongru WANG</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong </p>
+          <span><em>AACL-2023</em></span>
+        </div>
+
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
