--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <li>Sep 2023 </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
           <li>May 2023 </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Dialogue CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
           <li>May 2023 </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
-          <li>Oct 2022 </span> One paper is accepted by <em>Finds of EMNLP 2022.</em> &#128525;</li>
+          <li>Oct 2022 </span> One paper is accepted by <em>Findings of EMNLP 2022.</em> &#128525;</li>
           <li>Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li>
           <li>Jun 2022 </span> One paper is accepted by <em>Machine Intelligence Research.</em></li>
           <li>Feb 2022 </span> One paper is accepted by <em>ICASSP 2022</em>. &#128516; </li>
@@ -277,7 +277,8 @@
         </ul>
         
         <!--
-        <p>Jun 2022 <span style="color:red">[NEW]</span> Three Papers are rejected by ACL 2023 incuding 2 first-author papers</p>
+        <p>Sep 2023 <span style="color:red">[NEW]</span> Two Papers are rejected by AACL 2023 incuding 2 first-author papers</p>
+        <p>Jun 2023 <span style="color:red">[NEW]</span> Three Papers are rejected by ACL 2023 incuding 2 first-author papers</p>
         <p>Jun 2022 <span style="color:red">[NEW]</span> Two Papers are rejected by COLING 2022</p>
         <p>Jun 2022 <span style="color:red">[NEW]</span> One Paper is rejected by SIGDIAL 2022</p>
         <p>Dec 2021 <span style="color:red">[NEW]</span> Two Papers are rejected by AAAI 2021 Phase-1 and Two papers are rejected by AAAI 2021 Phase-2</p>
