--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
       <div class="col-12 col-lg-8">
 
       
-      <h1>Biography</h1>
+      <h1>About Me</h1>
 
-      <p>I am currently a 2nd year Ph.D. Student at The Chines University of Hong Kong, very honored and fortunate to be supervised by 
+      <p>I am currently a 3rd year Ph.D. Student at The Chines University of Hong Kong, very honored and fortunate to be supervised by 
       <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor degree from Communication University of China in 2019 and my research interests include LLM-based dialogue system, personalized open-domain dialogue system [ACL 2023], reinforcement learning [ICASSP 2022].
       </p>
 
