--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>Sep 2023 </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
           <li>Sep 2023 </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
           <li>May 2023 </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Dialogue CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
           <li>May 2023 </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
@@ -314,7 +315,7 @@
           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
           <img src="https://img.shields.io/badge/TOD_NLU-blue">
           <p class="author_list"><strong>Hongru WANG</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong </p>
-          <span><em>IJCNLP-AACL 2023</em></span>
+          <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> (oral paper) </strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -346,7 +347,7 @@
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
           <img src="https://img.shields.io/badge/TOD_DPL-blue">
           <p class="author_list">Wai-Chung Kwan, <strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Kam-Fai Wong</p>
-          <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong>Invited Paper </strong></span>
+          <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong style="color:red">Invited Paper </strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
