--- a/index.html
+++ b/index.html
@@ -258,18 +258,18 @@
       <div class="col-12 col-lg-8">
 
         <ul>
-          <li>Oct 2023 </span> Five papers are accepted by <em> EMNLP 2023 </em>, including two first-author papers: Cue-CoT and SAFARI. &#128525; </li>
-          <li>Sep 2023 </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
-          <li>Sep 2023 </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
-          <li>May 2023 </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Cue-CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
-          <li>May 2023 </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
-          <li>Oct 2022 </span> One paper is accepted by <em>Findings of EMNLP 2022.</em> &#128525;</li>
-          <li>Nov 2022 </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li>
-          <li>Jun 2022 </span> One paper is accepted by <em>Machine Intelligence Research.</em></li>
-          <li>Feb 2022 </span> One paper is accepted by <em>ICASSP 2022</em>. &#128516; </li>
-          <li>Apr 2021 </span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results"><em>Track 1 ICLR 2021 Medical Dialogue Response Generation</em></a></li>
-          <li>Aug 2020 </span> Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/"><em>SMP ECDT-2020</em></a></li>
-          <li>Apr 2020 </span> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results"><em>Common Sense Explanation and Validation SemEval 2020</em></a></li>
+          <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: Cue-CoT and SAFARI. &#128525; </li>
+          <li>Sep 2023: </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
+          <li>Sep 2023: </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
+          <li>May 2023: </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Cue-CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
+          <li>May 2023: </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
+          <li>Oct 2022: </span> One paper is accepted by <em>Findings of EMNLP 2022.</em> &#128525;</li>
+          <li>Nov 2022: </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li>
+          <li>Jun 2022: </span> One paper is accepted by <em>Machine Intelligence Research.</em></li>
+          <li>Feb 2022: </span> One paper is accepted by <em>ICASSP 2022</em>. &#128516; </li>
+          <li>Apr 2021: </span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results"><em>Track 1 ICLR 2021 Medical Dialogue Response Generation</em></a></li>
+          <li>Aug 2020: </span> Top3 at <a href="https://adamszq.github.io/smp2020ecdt_task1/"><em>SMP ECDT-2020</em></a></li>
+          <li>Apr 2020: </span> Top10 at <a href="https://competitions.codalab.org/competitions/21080#results"><em>Common Sense Explanation and Validation SemEval 2020</em></a></li>
 
           <!-- <li style="text-align:justify;">
             <i class="fa fa-thumbs-up"></i>
