add reject history

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
         </ul>
         
         <!--
+        <p>Oct 2023 <span style="color:red">[NEW]</span> One Paper is rejected by EMNLP 2023 and another one is withdrawn from EMNLP 2023 (M3Sum and InDust). </p>
         <p>Sep 2023 <span style="color:red">[NEW]</span> Two Papers are rejected by AACL 2023 incuding 2 first-author papers (in-consistent and universal retrieval)</p>
         <p>Jun 2023 <span style="color:red">[NEW]</span> Three Papers are rejected by ACL 2023 incuding 2 first-author papers</p>
         <p>Jun 2022 <span style="color:red">[NEW]</span> Two Papers are rejected by COLING 2022</p>
