--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 
             <li>
               <a href="https://www.zhihu.com/people/yi-jie-bai-ding-50" target="_blank" rel="noopener">
-                <i class="fa-brands fa-zhihu big-icon" style="color: #5962e3;"></i>
+                <i class="fab fa-zhihu big-icon" style="color: #5962e3;"></i>
               </a>
             </li>
             
 
             <li>
               <a href="https://twitter.com/WangCarrey" target="_blank" rel="noopener">
-                <i class="fa-brands fa-twitter big-icon" style="color: #64afdd;"></i>
+                <i class="fab fa-twitter big-icon" style="color: #64afdd;"></i>
               </a>
             </li>
 
@@ -418,7 +418,7 @@
     <div class="row"> 
       <div class="col-12 col-lg-4 section-heading">
         <h1>Preprint</h1>
-        <p>Draft &amp;&amp; in peer-review</p>
+        <p>Draft & in peer-review</p>
       </div>
   
       <div class="col-12 col-lg-8">
@@ -440,34 +440,28 @@
         </div>
 
 
-        <div>
+        <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Rui Wang*, <strong>Hongru Wang*</strong>, Fei Mi, Yi Chen, Ruifeng Xu, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/abs/2305.13733.pdf">Self-Critique Prompting with Large Language Models for Inductive Instructions (2023)</a>
+          <img src="https://img.shields.io/badge/TOD_DPL-blue">
         </div>
 
-        <div>
+        <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Wai-chung Kwan, Huimin Wang, <strong>Hongru Wang*</strong>, Zezhong Wang, Xian Wu, Yefeng Zheng, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/pdf/2309.00230v1.pdf">JoTR: A Joint Transformer and Reinforcement Learning Framework for Dialog Policy Learning (2023)</a> 
-          <img src="https://img.shields.io/badge/TOD_DPL-blue">
-          <p>
-            <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/kwanwaichung/jotr" target="_blank" rel="noopener">
-              Code
-            </a>
-          </p>
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/kwanwaichung/jotr" target="_blank" rel="noopener"> Code </a>
         </div>
 
-        <div>
+        <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG</strong>, Min Li, Zimo Zhou, Jia Zhu, Gabriel, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/abs/2011.08772.pdf">KddRES: A Multi-level Knowledge-driven Dialogue Dataset for Restaurant Towards Customized Dialogue System (2021) </a> 
           <img src="https://img.shields.io/badge/TOD_NLU-blue">
           Under Review
-          <p>
-            <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRESr" target="_blank" rel="noopener">
-              Code
-            </a>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRESr" target="_blank" rel="noopener"> Code </a>
           </p>
         </div>
 
