update for visiting

--- a/index.html
+++ b/index.html
@@ -329,60 +329,77 @@
         </div>
       -->
 
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai- Chung Kwan, Irwin King, Kam-Fai Wong: </span>
+          <a href="https://arxiv.org/abs/2108.11635">Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</a>
+          <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
+          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+          <span><em>Findings of EMNLP 2023</em></span>
+        </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"><strong>Hongru Wang</strong>, Rui Wang, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong: </span>
+          <a href="https://arxiv.org/abs/2108.11635">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
+          <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
+          <span><em>Findings of EMNLP 2023</em></span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
           <img src="https://img.shields.io/badge/TOD_NLU-blue">
-          <p class="author_list"><strong>Hongru WANG</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong </p>
           <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> (oral paper) </strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong: </span>
           <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
           <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
-          <p class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong </p>
           <span>Findings, <em>ACL 2023</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu: </span>
           <a href="https://aclanthology.org/2023.acl-long.364/">Retrieval-free Knowledge Injection through Multi-Document Traversal for Dialogue Models</a>
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
-          <p class="author_list">Rui Wang, Jianzhu Bao, Fei Mi, Yi Chen, <strong>Hongru Wang</strong>, Yasheng Wang, Yitong Li, Lifeng Shang, Kam-Fai Wong, Ruifeng Xu </p>
           <span><em>ACL 2023</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
           <img src="https://img.shields.io/badge/Other-red">
-          <p class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong </p>
           <span>Findings, <em>EMNLP 2022</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
           <img src="https://img.shields.io/badge/TOD_DPL-blue">
-          <p class="author_list">Wai-Chung Kwan, <strong>Hongru WANG$^\ddagger$</strong>, Huimin Wang, Kam-Fai Wong</p>
           <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong style="color:red">Invited Paper </strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
           <img src="https://img.shields.io/badge/TOD_DPL-blue">
-          <p class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong</p>
+          <img src="https://img.shields.io/badge/RLAIF-olive">
           <span><em>ICASSP 2022</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"><strong>Hongru WANG</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG: </span>
           <a href="https://arxiv.org/abs/2006.09161">CUHK at SemEval-2020 Task 4: CommonSense Explanation, Reasoning and Prediction with Multi-task Learning</a>
           <img src="https://img.shields.io/badge/Other-red">
-          <p class="author_list"><strong>Hongru WANG</strong>, Xiangru Tang, Sunny Lai, Kwong Sak Leung, Jia Zhu, Gabriel, and Kam-Fai WONG</p>
           <span><em>SemEval 2020</em></span>
         </div>
 
@@ -428,7 +445,7 @@
           <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Hongyuan Lu, Fei Mi, Kam-Fai Wong:</span>
           <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration (2023) </a> 
           <img src="https://img.shields.io/badge/Tool_Learning-violet">
-          Under Review (Top-1 favorite idea)
+          Under Review <strong style="color:red"> (Top-1 favorite motivation) </strong>
           <!-- <p>
             <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2011.08772" target="_blank" rel="noopener">
               Preprint
@@ -444,20 +461,20 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Rui Wang*, <strong>Hongru Wang*</strong>, Fei Mi, Yi Chen, Ruifeng Xu, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/abs/2305.13733.pdf">Self-Critique Prompting with Large Language Models for Inductive Instructions (2023)</a>
-          <img src="https://img.shields.io/badge/TOD_DPL-blue">
+          <img src="https://img.shields.io/badge/LLM-orange">
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Wai-chung Kwan, Huimin Wang, <strong>Hongru Wang*</strong>, Zezhong Wang, Xian Wu, Yefeng Zheng, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/pdf/2309.00230v1.pdf">JoTR: A Joint Transformer and Reinforcement Learning Framework for Dialog Policy Learning (2023)</a> 
-          <img src="https://img.shields.io/badge/LLM-orange">
+          <img src="https://img.shields.io/badge/TOD_DPL-blue">
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/kwanwaichung/jotr" target="_blank" rel="noopener"> Code </a>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"><strong>Hongru WANG</strong>, Min Li, Zimo Zhou, Jia Zhu, Gabriel, and Kam-Fai WONG:</span>
+          <span class="author_list"><strong>Hongru Wang</strong>, Min Li, Zimo Zhou, Jia Zhu, Gabriel, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/abs/2011.08772.pdf">KddRES: A Multi-level Knowledge-driven Dialogue Dataset for Restaurant Towards Customized Dialogue System (2021) </a> 
           <img src="https://img.shields.io/badge/TOD_NLU-blue">
           Under Review
