--- a/index.html
+++ b/index.html
@@ -333,8 +333,9 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai- Chung Kwan, Irwin King, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635">Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</a>
-          <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
+          <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+          <img src="https://img.shields.io/badge/LLM-orange">
           <span><em>Findings of EMNLP 2023</em></span>
         </div>
 
@@ -342,7 +343,25 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru Wang</strong>, Rui Wang, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
-          <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
+          <img src="https://img.shields.io/badge/PersonalizedDS-blue">
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <span><em>Findings of EMNLP 2023</em></span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"> Zezhong Wang, Luyao YE, <strong>Hongru Wang</strong>, Wai-Chung Kwan, David Ho, Kam-Fai Wong: </span>
+          <a href="https://arxiv.org/abs/2108.11635">Read-Prompt: A Readable Prompting Method for Reliable Knowledge Probing </a>
+          <img src="https://img.shields.io/badge/Knowledge_Probing-magenta">
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <span><em>Findings of EMNLP 2023</em></span>
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <span class="author_list"> Boyang XUE, Weichao Wang, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong: </span>
+          <a href="https://arxiv.org/abs/2108.11635"> Improving Factual Consistency for Knowledge-Grounded Dia- logue Systems via Knowledge Enhancement and Alignment </a>
+          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <span><em>Findings of EMNLP 2023</em></span>
         </div>
 
@@ -350,7 +369,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
-          <img src="https://img.shields.io/badge/TOD_NLU-blue">
+          <img src="https://img.shields.io/badge/TOD_NLU-teal">
           <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> (oral paper) </strong></span>
         </div>
 
@@ -358,7 +377,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong: </span>
           <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
-          <img src="https://img.shields.io/badge/PersonalizedDS-yellow">
+          <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <span>Findings, <em>ACL 2023</em></span>
         </div>
 
@@ -382,7 +401,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
-          <img src="https://img.shields.io/badge/TOD_DPL-blue">
+          <img src="https://img.shields.io/badge/TOD_DPL-teal">
           <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong style="color:red">Invited Paper </strong></span>
         </div>
 
@@ -390,7 +409,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Zezhong Wang, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2111.01398.pdf">Integrating Pretrained Language Model for Dialogue Policy Learning</a>
-          <img src="https://img.shields.io/badge/TOD_DPL-blue">
+          <img src="https://img.shields.io/badge/TOD_DPL-teal">
           <img src="https://img.shields.io/badge/RLAIF-olive">
           <span><em>ICASSP 2022</em></span>
         </div>
@@ -468,7 +487,7 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list">Wai-chung Kwan, Huimin Wang, <strong>Hongru Wang*</strong>, Zezhong Wang, Xian Wu, Yefeng Zheng, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/pdf/2309.00230v1.pdf">JoTR: A Joint Transformer and Reinforcement Learning Framework for Dialog Policy Learning (2023)</a> 
-          <img src="https://img.shields.io/badge/TOD_DPL-blue">
+          <img src="https://img.shields.io/badge/TOD_DPL-teal">
           <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/kwanwaichung/jotr" target="_blank" rel="noopener"> Code </a>
         </div>
 
@@ -476,9 +495,9 @@
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru Wang</strong>, Min Li, Zimo Zhou, Jia Zhu, Gabriel, and Kam-Fai WONG:</span>
           <a href="https://arxiv.org/abs/2011.08772.pdf">KddRES: A Multi-level Knowledge-driven Dialogue Dataset for Restaurant Towards Customized Dialogue System (2021) </a> 
-          <img src="https://img.shields.io/badge/TOD_NLU-blue">
+          <img src="https://img.shields.io/badge/TOD_NLU-teal">
           Under Review
-          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRESr" target="_blank" rel="noopener"> Code </a>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRES" target="_blank" rel="noopener"> Code </a>
           </p>
         </div>
 
