update for visiting

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         <div id="profile">
           <img class="avatar avatar-circle" src="/author/hongru-wang/profile.jpeg" alt="Hongru WANG">
           <div class="portrait-title">
-            <h2>Hongru WANG</h2>
+            <h2>Hongru WANG</h2> 
+            <p><a src="/cv/cv_eng.pdf">[CV]</a></p>
             <h3>Ph.D. in System Engineering and Engineering Management</h3>
             <h3>
               <span>The Chinese University of Hong Kong</span>
@@ -359,7 +360,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"> Boyang XUE, Weichao Wang, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong: </span>
+          <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635"> Improving Factual Consistency for Knowledge-Grounded Dia- logue Systems via Knowledge Enhancement and Alignment </a>
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <span><em>Findings of EMNLP 2023</em></span>
@@ -464,7 +465,7 @@
           <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Hongyuan Lu, Fei Mi, Kam-Fai Wong:</span>
           <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration (2023) </a> 
           <img src="https://img.shields.io/badge/Tool_Learning-violet">
-          Under Review <strong style="color:red"> (Top-1 favorite motivation) </strong>
+          Under Review <strong style="color:red"> (Most favorite motivation) </strong>
           <!-- <p>
             <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2011.08772" target="_blank" rel="noopener">
               Preprint
