update for visiting

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
           <img class="avatar avatar-circle" src="/author/hongru-wang/profile.jpeg" alt="Hongru WANG">
           <div class="portrait-title">
             <h2>Hongru WANG</h2> 
-            <p><a src="/cv/cv_eng.pdf">[CV]</a></p>
             <h3>Ph.D. in System Engineering and Engineering Management</h3>
             <h3>
               <span>The Chinese University of Hong Kong</span>
@@ -191,10 +190,10 @@
       <div class="col-12 col-lg-8">
 
       
-      <h1>About Me</h1>
+      <h1>About Me</h1> <span><a href="/cv/cv_eng.pdf">[CV]</a></span>
 
       <p>I am currently a 3rd year Ph.D. Student at The Chines University of Hong Kong, very honored and fortunate to be supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor degree from Communication University of China in 2019 and my research interests include LLM-based dialogue system, personalized open-domain dialogue system [ACL 2023], reinforcement learning [ICASSP 2022].
+      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor degree from Communication University of China in 2019 and my research interests include LLM-based dialogue system [EMNLP 2023], personalized open-domain dialogue system [ACL 2023], reinforcement learning [ICASSP 2022].
       </p>
 
       <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
@@ -361,7 +360,7 @@
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong: </span>
-          <a href="https://arxiv.org/abs/2108.11635"> Improving Factual Consistency for Knowledge-Grounded Dia- logue Systems via Knowledge Enhancement and Alignment </a>
+          <a href="https://arxiv.org/abs/2108.11635"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via Knowledge Enhancement and Alignment </a>
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <span><em>Findings of EMNLP 2023</em></span>
         </div>
