update for visiting

--- a/index.html
+++ b/index.html
@@ -254,9 +254,10 @@
         </div>
     </div>
 
-    <div class="row"> 
+    <!-- <div class="row"> 
         <ul><strong>[NOTICE]</strong> I am looking for any potentially visiting position! Free free to contact me for research discussion or cooperation. </ul>
-    </div>
+    </div> -->
+    
   </div>
 </div>
 
