--- a/index.html
+++ b/index.html
@@ -192,9 +192,7 @@
       
       <h1>About Me <a href="/cv/hongru_cv_eng.pdf" style="font-size: 20px;">[CV]</a></h1>
 
-      <p>I am currently a 3rd year Ph.D. Student at The Chines University of Hong Kong, very honored and fortunate to be supervised by 
-      <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor degree from Communication University of China in 2019 and my research interests include LLM-based dialogue system [EMNLP 2023], personalized open-domain dialogue system [ACL 2023], reinforcement learning [ICASSP 2022].
-      </p>
+      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. My research interests include LLM-based dialogue systems [EMNLP 2023], personalized open-domain dialogue systems [ACL 2023], and reinforcement learning [ICASSP 2022].
 
       <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
 
