--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <li>
               <i class="fa-li fas fa-graduation-cap"></i>
               <div class="description">
-                <p class="course">M.E. in Computer Science and Technology, 2020</p>
+                <p class="course">M.E. in Computer Science and Engineering, 2020</p>
                 <p class="institution">The Chinese University of Hong Kong</p>
               </div>
             </li>
@@ -273,7 +273,7 @@
       <div class="col-12 col-lg-8">
 
         <ul>
-          <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: Cue-CoT and SAFARI. &#128525; </li>
+          <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT</a> and <a href="https://arxiv.org/abs/2310.08840.pdf">SAFARI</a>. &#128525; </li>
           <li>Sep 2023: </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
           <li>Sep 2023: </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
           <li>May 2023: </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Cue-CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
@@ -331,7 +331,7 @@
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"><strong>Hongru Wang</strong>, Minda Hu, Yang Deng, Rui Wang, Fei Mi, Weichao Wang, Yasheng Wang, Wai- Chung Kwan, Irwin King, Kam-Fai Wong: </span>
-          <a href="https://arxiv.org/abs/2108.11635">Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</a>
+          <a href="https://arxiv.org/abs/2310.08840.pdf">Large Language Models as Source Planner for Personalized Knowledge-grounded Dialogue</a>
           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <img src="https://img.shields.io/badge/LLM-orange">
@@ -340,8 +340,8 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"><strong>Hongru Wang</strong>, Rui Wang, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong: </span>
-          <a href="https://arxiv.org/abs/2108.11635">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
+          <span class="author_list"><strong>Hongru Wang*</strong>, Rui Wang*, Fei Mi, Yang Deng, Zezhong Wang, Bin Liang, Ruifeng Xu, Kam-Fai Wong: </span>
+          <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT: Chain-of-thought Prompting for Responding to In-depth Dialogue Questions with LLMs</a>
           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <img src="https://img.shields.io/badge/LLM-orange">
           <span><em>Findings of EMNLP 2023</em></span>
@@ -349,7 +349,7 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <span class="author_list"> Zezhong Wang, Luyao YE, <strong>Hongru Wang</strong>, Wai-Chung Kwan, David Ho, Kam-Fai Wong: </span>
+          <span class="author_list"> Zezhong Wang*, Luyao YE*, <strong>Hongru Wang</strong>, Wai-Chung Kwan, David Ho, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635">Read-Prompt: A Readable Prompting Method for Reliable Knowledge Probing </a>
           <img src="https://img.shields.io/badge/Knowledge_Probing-magenta">
           <img src="https://img.shields.io/badge/LLM-orange">
@@ -359,7 +359,7 @@
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <span class="author_list"> Boyang XUE*, Weichao Wang*, <strong>Hongru Wang</strong>, Fei Mi, Rui Wang, Yasheng Wang, Lifeng Shang, Xin Jiang, Qun Liu, Kam-Fai Wong: </span>
-          <a href="https://arxiv.org/abs/2108.11635"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via Knowledge Enhancement and Alignment </a>
+          <a href="https://arxiv.org/abs/2310.08372.pdf"> Improving Factual Consistency for Knowledge-Grounded Dialogue Systems via Knowledge Enhancement and Alignment </a>
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <span><em>Findings of EMNLP 2023</em></span>
         </div>
@@ -369,7 +369,7 @@
           <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
           <img src="https://img.shields.io/badge/TOD_NLU-teal">
-          <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> (oral paper) </strong></span>
+          <span><em>IJCNLP-AACL 2023</em> <strong style="color:red"> oral paper </strong></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -630,7 +630,7 @@
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span>You can find me in wechat amount: 地球漫游必备手册</span>
+        <span>You can find me in wechat amount: 地球漫游必备手册 -> 慧用智能 </span>
       </li>
       
       <li>
