--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <li>May 2023: </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Cue-CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
           <li>May 2023: </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
           <li>Oct 2022: </span> One paper is accepted by <em>Findings of EMNLP 2022.</em> &#128525;</li>
-          <li>Nov 2022: </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li>
+          <!-- <li>Nov 2022: </span> Two papers are accepted by <em>ICNLSP 2022</em>. &#128074;&#127995;</li> -->
           <li>Jun 2022: </span> One paper is accepted by <em>Machine Intelligence Research.</em></li>
           <li>Feb 2022: </span> One paper is accepted by <em>ICASSP 2022</em>. &#128516; </li>
           <li>Apr 2021: </span> Top10 at <a href="https://competitions.codalab.org/competitions/29703#results"><em>Track 1 ICLR 2021 Medical Dialogue Response Generation</em></a></li>
