--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
       <ul class="navbar-nav d-md-inline-flex">
 
         <li class="nav-item">
-          <a class="nav-link " href="/#about" data-target="#about"><span>Home</span></a>
+          <a class="nav-link " href="https://rulegreen.github.io/publication/" data-target="#contact"><span>Publications</span></a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link " href="/#blog" data-target="#contact"><span>Blog</span></a>
         </li>
 
         <li class="nav-item">
