add visit update

--- a/publication/index.html
+++ b/publication/index.html
@@ -115,7 +115,7 @@
         <div class="universal-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <div id="container-publications">
+                    <div class="grid-sizer col-lg-12 isotope-item" id="container-publications">
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -209,24 +209,6 @@
                           <img src="https://img.shields.io/badge/Other-red">
                           <span><em>SemEval 2020</em></span>
                         </div>
-
-
-                        <div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2020">
-                            <div class="pub-list-item" style="margin-bottom: 1rem">
-                                <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                                <span class="author_list"><strong>Su Zhu$^\ddagger$</strong>, Ruisheng Cao$^\ddagger$ and Kai Yu</span>
-                                (2020).
-                                <a href="/publication/2020-dual-learning-for-semi-supervised-natural-language-understanding/">Dual Learning for Semi Supervised Natural Language Understanding</a>.
-                                IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP), vol. 28, pp. 1936-1947, 2020.
-                                <p>
-                                    <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2004.12299" target="_blank" rel="noopener">
-                                    Preprint
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                        
-
                     </div>
                 </div>
             </div>
