--- a/publication/index.html
+++ b/publication/index.html
@@ -62,14 +62,14 @@
         <nav class="navbar navbar-expand-lg navbar-light compensate-for-scrollbar" id="navbar-main">
             <div class="container">
                 <div class="d-none d-lg-inline-flex">
-                    <a class="navbar-brand" href="/">Academic</a>
+                    <a class="navbar-brand" href="/">Home</a>
                 </div>
                 <button type="button" class="navbar-toggler" data-toggle="collapse"
                     data-target="#navbar-content" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span><i class="fas fa-bars"></i></span>
                 </button>
                 <div class="navbar-brand-mobile-wrapper d-inline-flex d-lg-none">
-                    <a class="navbar-brand" href="/">Academic</a>
+                    <a class="navbar-brand" href="/">Home</a>
                 </div>
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex">
@@ -115,7 +115,7 @@
         <div class="universal-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="grid-sizer col-lg-12 isotope-item" id="container-publications">
+                    <!-- <div class="grid-sizer col-lg-12 isotope-item" id="container-publications"> -->
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -209,7 +209,9 @@
                           <img src="https://img.shields.io/badge/Other-red">
                           <span><em>SemEval 2020</em></span>
                         </div>
-                    </div>
+                    
+                    <!-- </div> -->
+                
                 </div>
             </div>
         </div>
