--- a/publication/index.html
+++ b/publication/index.html
@@ -112,6 +112,32 @@
         <div class="universal-wrapper pt-3">
             <h1>Publications</h1>
         </div>
+
+        <div class="universal-wrapper pt-3">
+            <li class="fa-regular fa-newspaper"><h2>Journal</h2></li>
+        </div>
+
+         <div class="universal-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong: </span>
+                      <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
+                      <img src="https://img.shields.io/badge/TOD_DPL-teal">
+                      <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong style="color:red">Invited Paper </strong></span>
+                    </div>
+                
+                </div>
+            </div>
+        </div>
+
+        <div class="universal-wrapper pt-3">
+            <li class="fa-solid fa-map" style="color: #a72b16;"><h2>Conference Paper</h2></li>
+        </div>
+
+
         <div class="universal-wrapper">
             <div class="row">
                 <div class="col-lg-12">
@@ -183,14 +209,6 @@
                           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
                           <img src="https://img.shields.io/badge/Other-red">
                           <span>Findings, <em>EMNLP 2022</em></span>
-                        </div>
-
-                        <div class="pub-list-item" style="margin-bottom: 1rem">
-                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                          <span class="author_list">Wai-Chung Kwan*, <strong>Hongru WANG*</strong>, Huimin Wang, Kam-Fai Wong: </span>
-                          <a href="https://arxiv.org/abs/2202.13675.pdf">A Survey on Recent Advances and Challenges in Reinforcement Learning Methods for Task-Oriented Dialogue Policy Learning</a>
-                          <img src="https://img.shields.io/badge/TOD_DPL-teal">
-                          <span>Equal Contribution, <em>Machine Intelligence Research.</em> <strong style="color:red">Invited Paper </strong></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
