add visit update

--- a/publication/index.html
+++ b/publication/index.html
@@ -114,7 +114,10 @@
         </div>
 
         <div class="universal-wrapper pt-3">
-            <li class="fa-regular fa-newspaper"><h2>Journal</h2></li>
+            <h2>
+                <li>Journal</li>
+                <i class="fa-regular fa-newspaper"></i>
+            </h2>
         </div>
 
          <div class="universal-wrapper">
@@ -134,7 +137,10 @@
         </div>
 
         <div class="universal-wrapper pt-3">
-            <li class="fa-solid fa-map" style="color: #a72b16;"><h2>Conference Paper</h2></li>
+            <h2>
+                <li>Conference Paper</li>
+                <i class="fa-solid fa-map" style="color: #a72b16;"></i>
+            </h2>
         </div>
 
 
