add visit update

--- a/publication/index.html
+++ b/publication/index.html
@@ -116,7 +116,7 @@
         <div class="universal-wrapper pt-3">
             <h2>
                 <li>Journal</li>
-                <i class="fa-regular fa-newspaper"></i>
+                <i class="fab fa-regular fa-newspaper"></i>
             </h2>
         </div>
 
@@ -139,7 +139,7 @@
         <div class="universal-wrapper pt-3">
             <h2>
                 <li>Conference Paper</li>
-                <i class="fa-solid fa-map" style="color: #a72b16;"></i>
+                <i class="fab fa-solid fa-map" style="color: #a72b16;"></i>
             </h2>
         </div>
 
