--- a/publication/index.html
+++ b/publication/index.html
@@ -214,7 +214,7 @@
                           <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
                           <img src="https://img.shields.io/badge/Other-red">
-                          <span>Findings, <em>EMNLP 2022</em></span>
+                          <span><em>Findings of EMNLP 2022</em></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
