add visit update

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link " href="/#blog" data-target="#contact"><span>Blog</span></a>
+          <a class="nav-link " href="https://rulegreen.github.io/blog/" data-target="#contact"><span>Blogs</span></a>
         </li>
 
         <li class="nav-item">
@@ -397,7 +397,7 @@
           <span class="author_list">Zhiming Mao, Jian Li, <strong>Hongru WANG</strong>, Xingshan Zeng, Kam-Fai Wong: </span>
           <a href="https://arxiv.org/abs/2210.05196">DIGAT: Modeling News Recommendation with Dual-Graph Interaction</a>
           <img src="https://img.shields.io/badge/Other-red">
-          <span>Findings, <em>EMNLP 2022</em></span>
+          <span><em>Findings of EMNLP 2022</em></span>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
