update for visiting

--- a/publication/index.html
+++ b/publication/index.html
@@ -78,7 +78,7 @@
                         </li>
 
                         <li class="nav-item">
-                          <a class="nav-link " href="/#blog" data-target="#contact"><span>Blog</span></a>
+                          <a class="nav-link " href="https://rulegreen.github.io/blog/" data-target="#contact"><span>Blogs</span></a>
                         </li>
 
                         <li class="nav-item">
@@ -86,7 +86,7 @@
                         </li>
                     </ul>
                 </div>
-                <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
+                <!-- <ul class="nav-icons navbar-nav flex-row ml-auto d-flex pl-md-2">
                     <li class="nav-item">
                         <a class="nav-link js-search" href="#"><i class="fas fa-search" aria-hidden="true"></i></a>
                     </li>
@@ -106,7 +106,7 @@
                             </a>
                         </div>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </nav>
         <div class="universal-wrapper pt-3">
@@ -116,7 +116,6 @@
         <div class="universal-wrapper pt-3">
             <h2>
                 <li>Journal</li>
-                <i class="fab fa-regular fa-newspaper"></i>
             </h2>
         </div>
 
@@ -139,7 +138,6 @@
         <div class="universal-wrapper pt-3">
             <h2>
                 <li>Conference Paper</li>
-                <i class="fab fa-solid fa-map" style="color: #a72b16;"></i>
             </h2>
         </div>
 
@@ -187,6 +185,14 @@
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <span class="author_list"> Yang Deng, Lizi Liao, Liang Chen, <strong>Hongru Wang</strong>, Wenqiang Lei, Tat-Seng Chua: </span>
+                          <a href="https://arxiv.org/abs/2305.13626.pdf"> Prompting and Evaluating Large Language Models for Proactive Dialogues: Clarification, Target-guided, and Non-collaboration </a>
+                          <img src="https://img.shields.io/badge/LLM-orange">
+                          <span><em>Findings of EMNLP 2023</em></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <span class="author_list"><strong>Hongru Wang</strong>, Zezhong Wang, Wai Chung Kwan, Kam-Fai Wong: </span>
                           <a href="https://arxiv.org/abs/2108.11635">MCML: A Novel Memory-based Contrastive Meta-Learning Method for Few Shot Slot Tagging</a>
                           <img src="https://img.shields.io/badge/TOD_NLU-teal">
@@ -198,7 +204,7 @@
                           <span class="author_list">Liang Chen, <strong>Hongru Wang</strong>, Yang Deng, Wai Chung Kwan, Zezhong Wang, Kam-Fai Wong: </span>
                           <a href="https://aclanthology.org/2023.findings-acl.462/">Towards Robust Personalized Dialogue Generation via Order-Insensitive Representation Regularization</a>
                           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
-                          <span>Findings, <em>ACL 2023</em></span>
+                          <span><em>Findings of ACL 2023</em></span>
                         </div>
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -216,6 +222,23 @@
                           <img src="https://img.shields.io/badge/Other-red">
                           <span><em>Findings of EMNLP 2022</em></span>
                         </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <span class="author_list"> <strong>Hongru Wang</strong>, Mingyu Cui, Zimo Zhou, Kam-Fai Wong: </span>
+                          <a href="https://aclanthology.org/2022.icnlsp-1.3/">TopicRefine: Joint Topic Prediction and Dialogue Response Generation for Multi-turn End-to-End Dialogue System</a>
+                          <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
+                          <span><em>ICNLSP 2022</em></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <span class="author_list"> Zezhong Wang*, <strong>Hongru Wang*</strong>, Wai Chung Kwan, Kam-Fai Wong: </span>
+                          <a href="https://aclanthology.org/2022.icnlsp-1.4/">Prior Omission of Dissimilar Source Domain(s) for Cost-Effective Few-Shot Learning</a>
+                          <img src="https://img.shields.io/badge/TOD_NLU-teal">
+                          <span><em>ICNLSP 2022</em></span>
+                        </div>
+
 
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
