--- a/index.html
+++ b/index.html
@@ -277,9 +277,10 @@
       <div class="col-12 col-lg-8">
 
         <ul>
+          <li>Oct 2023: </span> My blog <a href="https://mp.weixin.qq.com/s/zJHZTuNPNc0jyj5OvvL3-g">The Internal and External Capabilities of LLM-based Dialogue Systems</a> was reported by the Chinese largest academic WeChat Official Account: PaperWeekly (5.6k reads)</li>
           <li>Oct 2023: </span> Five papers are accepted by <em> EMNLP 2023</em>, including two first-author papers: <a href="https://arxiv.org/abs/2305.11792.pdf">Cue-CoT</a> and <a href="https://arxiv.org/abs/2310.08840.pdf">SAFARI</a>. &#128525; </li>
           <li>Sep 2023: </span> We introduce <a href="https://arxiv.org/pdf/2309.16090.pdf">Conceptual Tools</a> for LLM + Tool Learning!</li>
-          <li>Sep 2023: </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference, See u in Bali.</li>
+          <li>Sep 2023: </span> One paper <a href="https://arxiv.org/abs/2108.11635">MCML</a> is accepted by <em>AACL 2023</em> main conference (oral), See u in Bali.</li>
           <li>May 2023: </span> So delight to announce our recent two works: <a href="https://arxiv.org/pdf/2305.11792v1.pdf">Cue-CoT</a> and <a href="https://arxiv.org/pdf/2305.13733.pdf">INDust</a></li>
           <li>May 2023: </span> Two paper are accepted by <em>ACL 2023.</em> &#128525;</li>
           <li>Oct 2022: </span> One paper is accepted by <em>Findings of EMNLP 2022.</em> &#128525;</li>
