update for visiting

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
           <div class="col-12 col-lg-8">
             <div class="pub-list-item" style="margin-bottom: 1rem">
               <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-              <span class="author_list"><strong></strong>Hongru WANG</strong>, Gabreil, Changjian Liu, Kam-Fai Wong</span>
+              <span class="author_list"><strong></strong>Hongru WANG</strong>, Gabriel, Changjian Liu, Kam-Fai Wong</span>
               (2020).
               <a>SMP 2020 ECDT Few-shot Spoken Language Understanding</a>.
               <a>We use ERNIE, ERNIE+CRF, ERNIE+BiLSTM+CRF to solve this problem, and different trick like mask strategy. We get Top 3 at the leaderboard.</a>
@@ -567,7 +567,7 @@
           <div class="col-12 col-lg-8">
             <div class="pub-list-item" style="margin-bottom: 1rem">
               <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-              <span class="author_list"><strong></strong>Hongru WANG</strong>, Li Mee</span>
+              <span class="author_list"><strong></strong>Hongru WANG</strong>, Li Min</span>
               (2019).
               <a>A Game about Error Correction for Cantonese</a>.
               <a>Using js-cookie, javascript, bootstracp</a>
