--- a/index.html
+++ b/index.html
@@ -341,6 +341,8 @@
           <img src="https://img.shields.io/badge/KnowledgeDS-yellow">
           <img src="https://img.shields.io/badge/LLM-orange">
           <span><em>Findings of EMNLP 2023</em></span>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_poster.pdf" target="_blank" rel="noopener"> Poster </a>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/safari_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
@@ -350,6 +352,9 @@
           <img src="https://img.shields.io/badge/PersonalizedDS-blue">
           <img src="https://img.shields.io/badge/LLM-orange">
           <span><em>Findings of EMNLP 2023</em></span>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/Cue-CoT" target="_blank" rel="noopener"> Code </a>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/cuecot_poster.pdf" target="_blank" rel="noopener"> Poster </a>
+          <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="/papers/safari/cuecot_emnlp2023.pdf" target="_blank" rel="noopener"> PPT </a>
         </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
