--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         </li>
 
         <li class="nav-item">
+          <a class="nav-link " href="https://rulegreen.github.io/talk/"data-target="#contact"><span>Talks</span></a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
         </li>
 
