--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
       <div class="col-12 col-lg-8">
         <ul>
           <li>love for my girlfriend: <a href="tools/ValentinesDay-master/index.html">a gift</a> &#127873;</li>
-          <li>CUHK SEEM QE (IS & OR Track): <a href="https://github.com/LingweiMeng/QualifyingExamPreparing">All you need!</a></li>
+          <li>CUHK SEEM QE (IS and OR Track): <a href="https://github.com/LingweiMeng/QualifyingExamPreparing">All you need!</a></li>
         </ul>
       </div>
   
