--- a/publication/index.html
+++ b/publication/index.html
@@ -82,6 +82,11 @@
                         </li>
 
                         <li class="nav-item">
+                          <a class="nav-link " href="https://rulegreen.github.io/talk/"data-target="#contact"><span>Talks</span></a>
+                        </li>
+
+
+                        <li class="nav-item">
                           <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
                         </li>
                     </ul>
@@ -109,9 +114,9 @@
                 </ul> -->
             </div>
         </nav>
-        <div class="universal-wrapper pt-3">
+        <!-- <div class="universal-wrapper pt-3">
             <h1>Publications</h1>
-        </div>
+        </div> -->
 
         <div class="universal-wrapper pt-3">
             <h2>
