--- a/talk/index.html
+++ b/talk/index.html
@@ -114,9 +114,9 @@
                 </ul> -->
             </div>
         </nav>
-        <div class="universal-wrapper pt-3">
+        <!-- <div class="universal-wrapper pt-3">
             <h1>Blogs</h1>
-        </div>
+        </div> -->
 
         <div class="universal-wrapper pt-3">
             <h2>
