change talks and tools

--- a/index.html
+++ b/index.html
@@ -623,6 +623,7 @@
         <ul>
           <li>love for my girlfriend: <a href="tools/ValentinesDay-master/index.html">a gift</a> &#127873;</li>
           <li>CUHK SEEM QE (IS and OR Track): <a href="https://github.com/LingweiMeng/QualifyingExamPreparing">All you need!</a></li>
+          <li>A tool to short your bib file: <a href="https://github.com/ruleGreen/shortbiber">shortbiber</a>
         </ul>
       </div>
   
