--- a/talk/index.html
+++ b/talk/index.html
@@ -132,12 +132,13 @@
                         <li><a href="/papers/safari/safari_emnlp2023.pdf">Large Language Model as Source Planner for Knowledge-grouded Dialogue System</a></li>
                           <ul>
                             <li>NILLI Workshop, EMNLP 2023, Dec 2023 </li>
-                            <li>CUHK, Dec 2023 </li>
+                            <li>Doctoral Forum, CUHK, Dec 2023 </li>
                           </ul>
                         
                         <li>Large Language Model-based Dialogue System</li>
                         <ul>
                           <li>Huawei Noah Lab (HK), Nov 2023</li>
+                          <li>Techbeat, Dec 2023</li>
                         </ul>
                     </ul>
                 
