--- a/talk/index.html
+++ b/talk/index.html
@@ -138,7 +138,8 @@
                         <li>Large Language Model-based Dialogue System</li>
                         <ul>
                           <li>Huawei Noah Lab (HK), Nov 2023</li>
-                          <li>Techbeat, Dec 2023</li>
+                          <li>深度学习自然语言处理, Nov 2023</li>
+                          <li>Techbeat (将门创投), Dec 2023</li>
                         </ul>
                     </ul>
                 
