--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
 
       <!-- and <a href="https://lia.epfl.ch/~mi/">Dr. Mi Fei</a> from Huawei Noah'ark Lab under the Joint-Ph.D program between CUHK and Huawei -->
 
+      <ul>
+        <li> I am seeking visiting or internship opportunities to conduct related to LLM, preferably in Europe or America. </li>
+      </ul>
 
       <div class="row">
         <div class="col-md-5">
@@ -220,7 +223,9 @@
             
             <li>Tool-augmented Dialogue System</li>
 
-            <li>Large Language Model for Planning</li>
+            <li>Large Language Model</li>
+
+            <li>Safety and Alignment</li>
             
           </ul>
         </div>
